v0.5.0 - 2022-01-26
- Added support for issue #58 - authentication with user/password when SSPI is
  unavailable or not preferred.
- Pulled PR #68 to handle case where no longer behind PAC proxy
- Fixed minor bug in file:// PAC file handling
- Implemented #65 - support for specifying PAC in INI
- Implemented #73 - force auth mechanism in INI
- Merged PR #85 - sanitize authorization header, shutdown socket, defer
  connection header during auth (#71), drop completely for CONNECT, forward
  error body, 2.7 fix
- Switched to Python 3.7, drop 3.4 support
- Merged PR #80 - fallback to DIRECT if no proxy found via auto or PAC discovery
- Added basic auth support (PR #82)
- Fixed issue where an empty domain was breaking password access
- Fixed #88, issue 2 in #71, PR #83 - use auth mechanism in order
- Added code to keep-alive during authentication - issue 3 in #71
- Fixed #108 - case sensitive authentication response
- Fixed #116 - Python 3.0 deprecation compatibility
- Fixed #122 - pywin32 import order
- Resolved #72 via documentation update
- Minor changes to improve client and proxy disconnects

v0.4.0 - 2018-09-04
- Implemented #18 - support for multiple NTLM proxies that will be iterated
  through if connection fails
- Included fix for allowing parent proxy to resolve hostname if not resolvable
  locally - #18
- Added --socktimeout to configure maximum time to wait before giving up on
  socket connections
- Fixed #27 - Px does not exit with --quit
- Fixed #26 - Px doesn't attach to powershell console
- Allow Px to work with pythonw.exe - console output and stdout crash
- Fix Python 2.x crashes in quit()
- Fixed issue #22 - support for Kerberos authentication
- Removed pywin32 option since it doesn't work for Kerberos auth
- Fixed issues with useragent header override functionality
- Allow Px to run in the foreground when frozen or run with pythonw.exe - #25
- Make --proxy an optional setting if --noproxy is defined, reject connections